--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html ng-app="productsModule">
+<html ng-app="recibosApp">
     <head>
+        <meta charset="UTF-8">
         <script src="Scripts/jquery-1.9.1.min.js"></script>
         <script src="Scripts/bootstrap.min.js"></script>
-        <link href="Content/bootstrap.min.css" rel="stylesheet" />
+        <!-- <link href="Content/bootstrap.min.css" rel="stylesheet" /> -->
+        <link href="http://bootswatch.com/simplex/bootstrap.min.css" rel="stylesheet"/>
         <script src="Scripts/angular.min.js"></script>
         <script src="Scripts/angular-route.js"></script>
         <script src="MyScripts/modulo/pModule.js"></script>
         <script src="MyScripts/service/pService.js"></script>
         <script src="MyScripts/controller/mainController.js"></script>
-        <script src="MyScripts/controller/contactosController.js" ></script>
+        <script src="MyScripts/controller/controllers.js" ></script>
         <script src="MyScripts/utilities.js" ></script>
+        <link href="css/styles.css" rel="stylesheet"/>
     </head>
-    <body  class="container" ng-controller="mainController">
+    <body class="container" ng-controller="mainController">
         <h2>Index</h2>
-        <h1>{{Titulo}}</h1>
         <div>
             <ul>
-                <li><a href="#/Contactos/">Contactos</a></li>
+                <li><a href="#/Recibos/">Recibos</a></li>
             </ul>
         </div>
         <div ng-view>
-            <!--
-               This DIV loads templates depending upon route.
-            -->
         </div>
     </body>
 </html>
